# ripple

./: .gitignore  README.md  embed.html  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite-plugin-node-stdlib-browser.cjs  vite.config.ts
.claude/skills/verify/: SKILL.md
native/: CMakeLists.txt  Dockerfile  README.md  api.go  boost-user-config.jam  build.sh  engine.go  go.mod  main.go  net_js.go  promise.go  storage_js.go
native/js/: disk-library.js  socket-library.js
native/src/: ripple_alerts.cpp  ripple_bindings.cpp  ripple_disk_io.cpp  ripple_disk_io.hpp  ripple_session.cpp  ripple_session.hpp
src/: app.webmanifest  global-style.ts  index.html  index.tsx  rxdb.ts  shared-worker.ts  sw.js  vite-env.d.ts  webtorrent.ts  worker.ts
src/api/: index.ts
src/components/: add-torrent.tsx  drop-zone.tsx  file-system-access-popup.tsx  header.tsx  legal-doc.tsx  metadata-popup.tsx  modal.tsx  mount.tsx  privacy-popup.tsx  statistics-header.tsx  tooltip-display.tsx  tooltip.tsx  torrent-card.tsx  torrent-list.tsx
src/database/: actions.ts  collection.ts  database.ts  index.ts  rxdb.ts  schema.ts  settings.ts  tinybase.ts  torrents.ts  utils.ts
src/engine/: alerts.ts  disk-opfs.ts  engine.ts  index.ts  socket-webvpn.ts  torrent.ts  wasm-loader.ts
src/hooks/: use-engine.ts  use-torrent.ts  use-torrents.ts
src/player/: playback.ts  skin.tsx  source-buffer.ts  subtitles.ts  thumbnails.ts  videojs-player.tsx
src/router/: embed.tsx  file-handler.tsx  home.tsx  index.tsx  legal.tsx  path.ts  privacy.tsx  protocol-handler.tsx  watch.tsx
src/router/home/: index.tsx
src/shared-worker/: file.ts  fs.ts  index.ts  io-worker.ts  test.ts  torrent-manager.ts  torrent.ts  tsconfig.json  utils.ts
src/shared-worker/worker/: index.ts
src/store/: torrents-db.ts
src/torrent/: backend.ts  client.ts  collection.ts  constants.ts  coordinator.ts  database.ts  downloaded-ranges.ts  http.ts  index.ts  indexeddb-storage.ts  magnet.ts  node-shims.ts  opfs-single-file-store.ts  protocol.ts  recent-rate.ts  runtime.tsx  save-file.ts  shared-worker-probe.ts  sync.ts  torrent-manager.ts  types.ts  use-account.ts  use-cloud-backup.ts  use-folder.ts  use-player-torrent.ts  use-quota.ts  use-torrents.ts  watch.ts  webtorrent-excluded.ts  webtorrent-worker.ts  webtorrent.ts  worker.ts  zip.ts
src/ui/: cover.tsx  format.ts  icons.tsx  mock-data.ts  ripple.css  screens.tsx  types.ts  use-tweaks.ts  watch.ts
src/utils/: active-window-effect.ts  add-torrent.ts  bytes.ts  downloaded-ranges.ts  file-type.ts  pwa.ts  stream.ts  torrent.ts
src/worker/: client.ts  index.ts  rpc.ts  shared-worker.ts
tests/: shared-torrent-worker.spec.ts  torrent-ramp.spec.ts
